add back button to form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,8 @@
 
           <ul id="contact_links" class="mx-auto p-5 list-unstyled d-flex flex-column gap-3 col-lg-4">
             <li class="rounded bg-brand-primary">
-              <a href="./contact_gen_form.html" class="d-block p-2 rounded text-decoration-none text-white">Particulier
+              <a href="./contact_gen_form.html" class="d-block p-2 rounded text-decoration-none text-white"
+                >Particulier
               </a>
             </li>
             <li class="rounded bg-brand-primary">
