--- a/pages/contact_ent_form.html
+++ b/pages/contact_ent_form.html
@@ -1,210 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <!-- bootstrap -->
 
     <!-- icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet" />
 
     <!-- css -->
     <link
-            crossorigin="anonymous"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-            rel="stylesheet"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      rel="stylesheet"
     />
 
     <!-- js -->
     <script
-            crossorigin="anonymous"
-            defer
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+      defer
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     ></script>
 
-    <link href="../css/contact_form.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../style.css"/>
+    <link href="../css/contact_form.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../style.css" />
     <script defer src="../dist/main.bundle.js"></script>
 
     <title>Page d'accueil</title>
-</head>
-<body>
-<!--Start de la main page -->
-<main id="main" class="container">
-    <div class="d-flex flex-column my-4 ent_form_page">
+  </head>
+  <body>
+    <!--Start de la main page -->
+    <main id="main" class="container">
+      <div class="d-flex flex-column my-4 ent_form_page">
         <div id="ent_form" class="d-inline-flex align-items-center w-100 mb-4 ent_form_page_head">
-            <a class="position-absolute" href=""><img alt="" src="../media/svg/arrow_back.svg"/></a>
-            <h1 class="mx-auto text-center text-brand-primary text-uppercase">Contact</h1>
+          <a class="position-absolute" href="contact.html"><img alt="" src="../media/svg/arrow_back.svg" /></a>
+          <h1 class="mx-auto text-center text-brand-primary text-uppercase">Contact</h1>
         </div>
         <section id="steps" class="mx-auto w-75">
-            <div
-                    id="first_step"
-                    class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center justify-content-center ent_form_page_rect_select w-75 d-lg-none"
-            >
-                <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">1</span>
-                <hr class="w-25"/>
-                <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">2</span>
-                <hr class="w-25"/>
-                <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">3</span>
-            </div>
-            <div
-                    id="second_step"
-                    class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center justify-content-center ent_form_page_rect_select d-lg-none"
-            >
-                <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">1</span>
-                <hr class="w-25"/>
-                <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">2</span>
-                <hr class="w-25"/>
-                <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">3</span>
-            </div>
-            <div
-                    id="third_step"
-                    class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center justify-content-center ent_form_page_rect_select d-lg-none"
-            >
-                <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">1</span>
-                <hr class="w-25"/>
-                <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">2</span>
-                <hr class="w-25"/>
-                <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">3</span>
-            </div>
+          <div
+            id="first_step"
+            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center justify-content-center ent_form_page_rect_select w-75 d-lg-none"
+          >
+            <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">1</span>
+            <hr class="w-25" />
+            <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">2</span>
+            <hr class="w-25" />
+            <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">3</span>
+          </div>
+          <div
+            id="second_step"
+            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center justify-content-center ent_form_page_rect_select d-lg-none"
+          >
+            <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">1</span>
+            <hr class="w-25" />
+            <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">2</span>
+            <hr class="w-25" />
+            <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">3</span>
+          </div>
+          <div
+            id="third_step"
+            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center justify-content-center ent_form_page_rect_select d-lg-none"
+          >
+            <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">1</span>
+            <hr class="w-25" />
+            <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">2</span>
+            <hr class="w-25" />
+            <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">3</span>
+          </div>
         </section>
         <div id="contact_div" class="d-flex flex-column align-items-center mb-5 ent_form_page_form mx-auto w-75">
-            <form
-                    id="contact_form"
-                    action="contact_ent_form.html"
-                    method="get"
-                    class="d-flex flex-column w-100 p-2 rounded-5 bg-brand-secondary p-4 mb-5"
-            >
-                <div id="first_form" class="d-flex flex-column ent_form_page_form">
-                    <label for="ent_form_name">Prénom</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
-                        id="ent_form_name"
-                        name="name"
-                        placeholder="ex. John"
-                        type="text"
-                />
-                    <label for="ent_form_lastname">Nom</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
-                        id="ent_form_lastname"
-                        name="lastname"
-                        placeholder="ex. Wick"
-                        type="text"
-                />
-                    <label for="ent_form_ent_name">Nom de l’entreprise</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
-                        id="ent_form_ent_name"
-                        name="ent_name"
-                        placeholder="ex. Baba Yaga Inc."
-                        type="text"
-                />
-                    <label for="ent_form_email">Email</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark mb-2"
-                        id="ent_form_email"
-                        name="email"
-                        placeholder="ex. john.doe@gmail.com"
-                        type="text"
-                />
-                </div>
-                <div id="second_form" class="d-flex flex-column ent_form_page_form">
-                    <label for="ent_form_adress">Adresse</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
-                        id="ent_form_adress"
-                        name="adress"
-                        placeholder="ex. rue Hôtel de ville"
-                        type="text"
-                />
-                    <label for="ent_form_pc">Code Postal</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
-                        id="ent_form_pc"
-                        name="pc"
-                        placeholder="ex. 44000"
-                        type="text"
-                />
-                    <label for="ent_form_city">Ville</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
-                        id="ent_form_city"
-                        name="city"
-                        placeholder="ex. Montpellier"
-                        type="text"
-                />
-                    <label for="ent_form_phone">Téléphone</label
-                    ><input
-                        class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark mb-2"
-                        id="ent_form_phone"
-                        name="phone"
-                        placeholder="ex. +33 1 23 45 67 89"
-                        type="text"
-                />
-                </div>
-                <div id="third_form" class="d-flex flex-column ent_form_page_form">
-                    <label for="ent_form_desc">Description</label
-                    ><textarea
-                        placeholder="ex. Installation d’ombrières solaires sur...(max 200 caractères)"
-                        class="bg-brand-secondary_40 border-dark mb-3 pb-2"
-                        name="desc"
-                        id="ent_form_desc"
-                ></textarea>
-                    <label class="d-none" for="ent_form_upload">Fichier</label>
-                    <div id="upload" class="text-center border border-2 border-dark position-relative">
-                        <div id="not_uploaded" class="">
-                            <input
-                                    class="opacity-0 position-absolute overflow-hidden d-block h-100 w-100"
-                                    type="file"
-                                    name="upload"
-                                    id="ent_form_upload"
-                                    on
-                            />
-                            <img class="my-2" src="../media/svg/upload.svg" alt=""/>
-                            <p class="text-brand-primary mx-1">Choisir un fichier depuis votre smartphone</p>
-                        </div>
-                        <div id="uploaded" class="d-inline">
-                            <span id="filename" class="text-brand-primary mx-1"></span>
-                            <img id="red_cross"
-                                 src="../media/svg/cross_red_circle.svg"
-                                 alt="">
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <div id="first_form_btn" class="d-inline-flex align-items-center d-lg-none">
-            <span class="text-center" href="#"
-            ><img alt="" class="my-4" src="../media/svg/next_button.svg"
-            /></span>
+          <form
+            id="contact_form"
+            action="contact_ent_form.html"
+            method="get"
+            class="d-flex flex-column w-100 p-2 rounded-5 bg-brand-secondary p-4 mb-5"
+          >
+            <div id="first_form" class="d-flex flex-column ent_form_page_form">
+              <label for="ent_form_name">Prénom</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
+                id="ent_form_name"
+                name="name"
+                placeholder="ex. John"
+                type="text"
+              />
+              <label for="ent_form_lastname">Nom</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
+                id="ent_form_lastname"
+                name="lastname"
+                placeholder="ex. Wick"
+                type="text"
+              />
+              <label for="ent_form_ent_name">Nom de l’entreprise</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
+                id="ent_form_ent_name"
+                name="ent_name"
+                placeholder="ex. Baba Yaga Inc."
+                type="text"
+              />
+              <label for="ent_form_email">Email</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark mb-2"
+                id="ent_form_email"
+                name="email"
+                placeholder="ex. john.doe@gmail.com"
+                type="text"
+              />
             </div>
-            <div id="second_form_btn" class="d-inline-flex align-items-center d-lg-none">
+            <div id="second_form" class="d-flex flex-column ent_form_page_form">
+              <label for="ent_form_adress">Adresse</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
+                id="ent_form_adress"
+                name="adress"
+                placeholder="ex. rue Hôtel de ville"
+                type="text"
+              />
+              <label for="ent_form_pc">Code Postal</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
+                id="ent_form_pc"
+                name="pc"
+                placeholder="ex. 44000"
+                type="text"
+              />
+              <label for="ent_form_city">Ville</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
+                id="ent_form_city"
+                name="city"
+                placeholder="ex. Montpellier"
+                type="text"
+              />
+              <label for="ent_form_phone">Téléphone</label
+              ><input
+                class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark mb-2"
+                id="ent_form_phone"
+                name="phone"
+                placeholder="ex. +33 1 23 45 67 89"
+                type="text"
+              />
+            </div>
+            <div id="third_form" class="d-flex flex-column ent_form_page_form">
+              <label for="ent_form_desc">Description</label
+              ><textarea
+                placeholder="ex. Installation d’ombrières solaires sur...(max 200 caractères)"
+                class="bg-brand-secondary_40 border-dark mb-3 pb-2"
+                name="desc"
+                id="ent_form_desc"
+              ></textarea>
+              <label class="d-none" for="ent_form_upload">Fichier</label>
+              <div id="upload" class="text-center border border-2 border-dark position-relative">
+                <div id="not_uploaded" class="">
+                  <input
+                    class="opacity-0 position-absolute overflow-hidden d-block h-100 w-100"
+                    type="file"
+                    name="upload"
+                    id="ent_form_upload"
+                    on
+                  />
+                  <img class="my-2" src="../media/svg/upload.svg" alt="" />
+                  <p class="text-brand-primary mx-1">Choisir un fichier depuis votre smartphone</p>
+                </div>
+                <div id="uploaded" class="d-inline">
+                  <span id="filename" class="text-brand-primary mx-1"></span>
+                  <img id="red_cross" src="../media/svg/cross_red_circle.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </form>
+          <div id="first_form_btn" class="d-inline-flex align-items-center d-lg-none">
+            <span class="text-center" href="#"><img alt="" class="my-4" src="../media/svg/next_button.svg" /></span>
+          </div>
+          <div id="second_form_btn" class="d-inline-flex align-items-center d-lg-none">
             <span class="text-center mx-4" href="#"
-            ><img alt="back" class="my-4" src="../media/svg/back_button.svg"
+              ><img alt="back" class="my-4" src="../media/svg/back_button.svg"
             /></span>
-                <span class="text-center mx-4" href="#"
-                ><img alt="next" class="my-4" src="../media/svg/next_button.svg"
-                /></span>
-            </div>
-            <div id="third_form_btn" class="d-inline-flex align-items-center">
+            <span class="text-center mx-4" href="#"
+              ><img alt="next" class="my-4" src="../media/svg/next_button.svg"
+            /></span>
+          </div>
+          <div id="third_form_btn" class="d-inline-flex align-items-center">
             <span class="text-center mx-4 d-lg-none" href="#"
-            ><img alt="back" class="my-4" src="../media/svg/back_button.svg"
+              ><img alt="back" class="my-4" src="../media/svg/back_button.svg"
             /></span>
-                <button class="h-100 bg-brand-primary border-0 text-white rounded-2 fs-3 p-2 mx-4">
-                    Envoyer
-                </button>
-            </div>
+            <button class="h-100 bg-brand-primary border-0 text-white rounded-2 fs-3 p-2 mx-4">Envoyer</button>
+          </div>
         </div>
         <div
-                id="ent_resume"
-                class="d-flex flex-column ent_form_page_form mx-auto w-75 py-4 px-2 rounded-5 bg-brand-secondary"
+          id="ent_resume"
+          class="d-flex flex-column ent_form_page_form mx-auto w-75 py-4 px-2 rounded-5 bg-brand-secondary"
         ></div>
-    </div>
-</main>
-<!--End de la main page -->
-</body>
+      </div>
+    </main>
+    <!--End de la main page -->
+  </body>
 </html>
