add back button to form

--- a/pages/contact_ent_form.html
+++ b/pages/contact_ent_form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
@@ -110,7 +110,7 @@
                 id="ent_form_email"
                 name="email"
                 placeholder="ex. john.doe@gmail.com"
-                type="text"
+                type="email"
               />
             </div>
             <div id="second_form" class="d-flex flex-column ent_form_page_form">
@@ -120,7 +120,7 @@
                 id="ent_form_adress"
                 name="adress"
                 placeholder="ex. rue Hôtel de ville"
-                type="text"
+                type="tel"
               />
               <label for="ent_form_pc">Code Postal</label
               ><input
@@ -163,7 +163,7 @@
                     type="file"
                     name="upload"
                     id="ent_form_upload"
-                    on
+                    accept=".pdf"
                   />
                   <img class="my-2" src="../media/svg/upload.svg" alt="" />
                   <p class="text-brand-primary mx-1">Choisir un fichier depuis votre smartphone</p>
