--- a/pages/contact_syn_form.html
+++ b/pages/contact_syn_form.html
@@ -110,7 +110,7 @@
                 id="ent_form_email"
                 name="email"
                 placeholder="ex. john.doe@gmail.com"
-                type="text"
+                type="email"
               />
             </div>
             <div id="second_form" class="d-flex flex-column ent_form_page_form">
@@ -144,7 +144,7 @@
                 id="ent_form_phone"
                 name="phone"
                 placeholder="ex. +33 1 23 45 67 89"
-                type="text"
+                type="tel"
               />
             </div>
             <div id="third_form" class="d-flex flex-column ent_form_page_form">
@@ -163,7 +163,7 @@
                     type="file"
                     name="upload"
                     id="ent_form_upload"
-                    on
+                    accept=".pdf"
                   />
                   <img class="my-2" src="../media/svg/upload.svg" alt="" />
                   <p class="text-brand-primary mx-1">Choisir un fichier depuis votre smartphone</p>
