--- a/pages/map.html
+++ b/pages/map.html
@@ -1,70 +1,86 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- bootstrap -->
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+	<!-- bootstrap -->
 
-    <!-- css -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+	<!-- icons -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
-    <!-- js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-      defer
-    ></script>
+	<!-- css -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="../style.css" />
-    <script src="../dist/main.bundle.js" defer></script>
-    <script src="../dist/map.bundle.js" defer></script>
-    <title>Carte interactive</title>
-  </head>
+	<!-- js -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"
+		defer></script>
 
-  <body>
-    <div class="title_map text-center text-brand-primary fw-bolder text-shadow fs-7 mb-0 py-4">
-      Retrouvez les localisations de nos ombrières
-    </div>
-    <form action="">
-      <div class="row">
-        <div class="col">
-          <input name="lat" type="text" class="form-control" placeholder="First name" aria-label="First name" />
-        </div>
-        <div class="col">
-          <input name="long" type="text" class="form-control" placeholder="Last name" aria-label="Last name" />
-        </div>
-        <div class="col">
-          <input name="client" type="text" class="form-control" placeholder="First name" aria-label="First name" />
-        </div>
-        <div class="col">
-          <input name="ombrières" type="text" class="form-control" placeholder="Last name" aria-label="Last name" />
-        </div>
-        <div class="col">
-          <input name="capacité" type="text" class="form-control" placeholder="Last name" aria-label="Last name" />
-        </div>
-      </div>
-      <button type="submit">submit</button>
-    </form>
+	<link rel="stylesheet" href="../style.css" />
+	<script src="../dist/main.bundle.js" defer></script>
+	<script src="../dist/map.bundle.js" defer></script>
+	<title>Carte interactive</title>
+</head>
 
-    <div id="map" style="height: 85vh">
-      <a href="https://www.maptiler.com" style="position: flex"
-        ><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"
-      /></a>
-    </div>
-    <p>
-      <a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a>
-      <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>
-    </p>
-  </body>
+<body>
+	<div class="container">
+		<div class="title_map text-center text-brand-primary fw-bolder text-shadow fs-7 mb-0 py-4">
+			Retrouvez les localisations de nos ombrières
+		</div>
+		<div class="px-3">
+			<form action="">
+				<div class="text-center w-100">
+					<button class="btn btn-secondary btn-block bg-brand-primary btn-sm px-3" type="button"
+						data-bs-toggle="collapse"
+						onclick="document.querySelector('#mapForm').classList.toggle('collapse')" id="button" alt="bouton pour ajouter les
+				ombrières
+				solaires sur la carte">Ajouter les
+						ombrières
+						solaires</button>
+				</div>
+				<div class="collapse col-lg-6 mx-auto" id="mapForm">
+					<div class="form-group">
+						<label for="client" class="text-brand-primary mt-3">Client :</label>
+						<input type="string" class="w-100 form-control form-control-sm"
+							placeholder="ex. FlowerPower SA">
+					</div>
+					<div class="form-group">
+						<label for="latitude" class="text-brand-primary mt-2">Latitude :</label>
+						<input type="number" class="w-100 form-control form-control-sm" placeholder="ex. 43.458">
+					</div>
+					<div class="form-group">
+						<label for="longitude" class="text-brand-primary mt-2">Longitude :</label>
+						<input type="number" class="w-100 form-control form-control-sm" placeholder="ex. 3.256">
+					</div>
+					<div class="form-group">
+						<label for="nombreOmbrelles" class="text-brand-primary mt-2">Nombre d'ombrelles :</label>
+						<input type="number" class="w-100 form-control form-control-sm" placeholder="ex. 6">
+					</div>
+					<div class="form-group">
+						<label for="Capacité" class="text-brand-primary mt-2">Capacité :</label>
+						<input type="number" class="w-100 form-control form-control-sm" placeholder="ex. 32Wh">
+					</div>
+					<div class="text-center my-3">
+						<button class="btn btn-secondary bg-brand-primary btn-sm px-3 " type="button" id="addMarker"
+							alt="bouton ajouter">Ajouter</button>
+					</div>
+				</div>
+			</form>
+		</div>
+
+		<div id="map" style="height: 85vh">
+			<a href="https://www.maptiler.com" style="position: flex"><img
+					src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo" /></a>
+		</div>
+		<p>
+			<a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a>
+			<a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>
+		</p>
+	</div>
+</body>
+
 </html>
