--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         </div>
         <div
           class="row position-relative p-2 d-lg-none"
+          href="../pages/map.html"
           data-aos="fade-up"
           data-aos-offset="200"
           data-aos-delay="550"
@@ -156,15 +157,19 @@
             <p class="text-light map-border fw-bold bg-dark bg-opacity-75 p-5">Appuyez pour ouvrir</p>
           </div>
         </div>
-        <div id="map" style="height: 85vh">
+        <div id="map" style="height: 85vh" class="d-none d-lg-block" data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="550"
+          data-aos-duration="1000"> 
           <a href="https://www.maptiler.com" style="position: flex"
             ><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"
           /></a>
-        </div>
-        <p>
+          <p>
           <a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a>
           <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>
         </p>
+        </div>
+        
         
         </div>
       </section>
